# terraform-operator-tasks

./: .gitignore  README.md  setup.sh  tf.sh
.github/workflows/: build-script-image.yaml  script-amd64.yaml  terraform-operator-script-releaser.yaml  terraform-operator-setup-releaser.yaml  tftaskv1.yaml  tftaskv1_0_1.yaml  tftaskv1_1_0.yaml  tftaskv1_1_1.yaml
images/: build-setup-image.py  build-tftask-image.py  build_tftask_image.py  builder.py  entrypoint  pyproject.toml  script-amd64.Dockerfile  script-arm64v8.Dockerfile  script-toolset.sh  setup-amd64.Dockerfile  setup-arm64v8.Dockerfile  tag_check.py  tftaskv1-arm64v8.Dockerfile  tftaskv1.0.1-amd64.Dockerfile  tftaskv1.0.1-arm64v8.Dockerfile  tftaskv1.1.0-amd64.Dockerfile  tftaskv1.1.0-arm64v8.Dockerfile  tftaskv1.1.1-amd64.Dockerfile  tftaskv1.1.1-arm64v8.Dockerfile  usersetup
images/entrypoint/: .gitignore  README.md  entrypoint.cpp
